--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -3,15 +3,17 @@
     <button class="btn btn-success">New Recipe</button>
   </div>
 </div>
-<div *ngFor="let item of recipes" class="row">
+<hr>
+<div class="row">
   <div class="col-xs-12">
-    <a href="#" class="list-group-item clearfix">
+    <a href="#" class="list-group-item clearfix" *ngFor="let item of recipes">
       <div class="pull-left">
         <h4 class="list-group-item-heading">{{item.recipeName}}</h4>
         <p class="list-group-item-text">{{item.description}}</p>
       </div>
     <span class="pull-right">
-      <img src="" alt="" class="img-responsive" style="max-height: 50px;">
+      <img
+      [src]="item.imagePath" alt="{{item.recipeName}}" class="img-responsive" style="max-height: 50px;">
     </span>
     </a>
     <app-recipe-item></app-recipe-item>
