--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,14 +1,14 @@
 <div class="row">
   <div class="col-xs-12">
     <img [src]="recipe.imagePath"
-         alt="{{recipe.recipeName}}"
+         alt="{{recipe.name}}"
          class="img-responsive"
          style="max-height: 300px">
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>{{ recipe.recipeName }}</h1>
+    <h1>{{ recipe.name }}</h1>
   </div>
 </div>
 <div class="row">
@@ -20,8 +20,8 @@
       </button>
       <ul class="dropdown-menu">
         <li><a (click)="onAddToShoppingList()" style="cursor: pointer;">To Shopping List</a></li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
+        <li><a style="cursor: pointer;" (click)="onEditRecipe()" >Edit Recipe</a></li>
+        <li><a style="cursor: pointer;" >Delete Recipe</a></li>
       </ul>
     </div>
   </div>
