--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,21 +1,25 @@
 <div class="row">
   <div class="col-xs-12">
-    <img [src]="recipe.imagePath"
-         alt="{{recipe.name}}"
-         class="img-responsive"
-         style="max-height: 300px">
+    <img *ngIf="recipe.name != undefined"
+      [src]="recipe.imagePath"
+      alt="{{ recipe.name }}"
+      class="img-responsive"
+      style="max-height: 300px;">
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>{{ recipe.name }}</h1>
+    <h1 *ngIf="recipe.name">{{ recipe.name }}</h1>
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group"
-        appDropdown>
-      <button type="button" class="btn btn-primary dropdown-toggle">
+    <div
+      class="btn-group"
+      appDropdown>
+      <button
+        type="button"
+        class="btn btn-primary dropdown-toggle">
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
@@ -37,7 +41,7 @@
       <li
         class="list-group-item"
         *ngFor="let ingredient of recipe.ingredients">
-        {{ ingredient.name | uppercase }} - {{ ingredient.amount }}
+        {{ ingredient.name }} - {{ ingredient.amount }}
       </li>
     </ul>
   </div>
